fixed so that when stock symbol dropdown is reset, the 24 hours chart interval time is highlighted

--- a/create.html
+++ b/create.html
@@ -313,6 +313,14 @@
               twentyFourHoursAgoTime,
               nowTime);
 
+            $(".chart-time-interval-button").each(function () {
+              $(this).removeClass("selected-chart-time-interval");
+              if($(this).html() == "Past 24 Hours") {
+                $(this).addClass("selected-chart-time-interval");
+              }
+            });
+
+
 
             populateEndDateOptions();
             $("#stock-price-history").show();
