added pick stock text

--- a/create.html
+++ b/create.html
@@ -28,6 +28,7 @@
     <div class="container">
       <div class="jumbotron">
         <div>
+          <h2 style="color: #53C781; margin-bottom: 20px;">Pick a stock.</h2>
           <select id="selected-symbol" class='form-control symbol-dropdown'>
           </select>
         </div>
