--- a/prediction.html
+++ b/prediction.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>Predict</title>
 
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="../assets/css/custom.css" rel="stylesheet">
@@ -38,8 +38,33 @@
     <div class="container">
         <div class="jumbotron">
             <div id="prediction-result" class="prediction-active">
-                <h2>Prediction is still valid.</h2>
-                <h4>Last checked on 10/8/2015 at 9:36am when the price was $92.77. Prediction's endtime is on 10/8/2015 at 4:55pm.</h4>
+            </div>
+        </div>
+
+        <div id="current-price-jumbotron" class="jumbotron" style="display: none;">
+            <div>
+              <h4>USD ($)</h4>
+              <h3 id="current-price" class="current-price-massive" style="color: #53B981; margin-bottom: 0px;">
+              </h3>
+            </div>
+        </div>
+
+        <div id="stock-price-history" class="jumbotron" style="">
+            <h3 style="text-align: center;"><span id="chart-header-symbol" style="color: #53B981;"></span> Stock Price History</h3>
+            <div class="row">
+                <div class="col-md-4">
+                   <!-- by default the 24 hour price history is selected -->
+                    <button class="btn btn-custom chart-time-interval-button selected-chart-time-interval">Past 24 Hours</button>
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-custom chart-time-interval-button" style="">Past Month</button>
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-custom chart-time-interval-button">Past Year</button>
+                </div>
+
+                <div id="price-history-chart" style="min-width: 310px; height: 400px; margin: 0 auto; padding-bottom: 10px;">
+        </div>
             </div>
         </div>
 
@@ -47,10 +72,10 @@
             <hr>
             <p class="col-lg-6">
                 <span style="background-color: #53B981;" class="badge">
-                    <a style="color: white;" href="/.">Home</a>
+                    <a style="color: white;" href="http://predict.toine.io">Home</a>
                 </span>
                 <span style="background-color: #53B981;" class="badge">
-                    <a style="color: white;" href="create">Create</a>
+                    <a style="color: white;" href="http://predict.toine.io/create">Create</a>
                 </span>
             </p>
             <p class="col-lg-6" id="copyright-notice">&copy; <a class="a-custom" href="http://www.antoinedahan.com">Antoine Dahan </a>
@@ -71,11 +96,79 @@
 <script>
     $(document).ready(function () {
 
+        var populatePageElements = function(predictionSymbol) {
+            $("#p-object").html(predictionSymbol);
+            $("#chart-header-symbol").html(predictionSymbol);
+            
+            // populate the price history graph with the recorded prices over the past 24 hours
+            var nowTime = parseInt((new Date).getTime()/1000);
+            var twentyFourHoursAgoTime = nowTime - (24*60*60);
+            populatePriceHistoryGraphTimeInterval(predictionSymbol,
+              twentyFourHoursAgoTime,
+              nowTime);
+            $(".chart-time-interval-button").each(function () {
+              $(this).removeClass("selected-chart-time-interval");
+              if($(this).html() == "Past 24 Hours") {
+                $(this).addClass("selected-chart-time-interval");
+              }
+            });
+
+            /* adding listeners to chart time interval buttons */
+            $(".chart-time-interval-button").each(function () {
+                var thisTimeIntervalButton = this;
+                // add event listener for on-click to remove all other buttons borders and add one to self
+                thisTimeIntervalButton.addEventListener("click", function () {
+                    // remove the selected-border from all of the time interval buttons
+                    $(".chart-time-interval-button").each(function () {
+                        $(this).removeClass("selected-chart-time-interval");
+                    });
+                    // add the selected-border to the existing time interval class
+                    $(thisTimeIntervalButton).addClass("selected-chart-time-interval");
+                    // if requesting the past day, populate the chart with realtime prices from the past 24 hours
+                    if ($(this).html() == "Past 24 Hours") {
+                        // populate the price history graph with the recorded prices over the past 24 hours
+                        var nowTime = parseInt((new Date).getTime() / 1000);
+                        var twentyFourHoursAgoTime = nowTime - (24 * 60 * 60);
+                        populatePriceHistoryGraphTimeInterval($("#chart-header-symbol").html(),
+                          twentyFourHoursAgoTime,
+                          nowTime);
+                    }
+                    // otherwise populate the chart based on historical prices from past month or year
+                    else if ($(this).html() == "Past Month") {
+                        var nowTime = parseInt((new Date).getTime() / 1000);
+                        var thirtyDaysAgoTime = nowTime - (30 * 24 * 60 * 60);
+                        populatePriceHistoryGraphHistorical($("#chart-header-symbol").html(),
+                          thirtyDaysAgoTime,
+                          nowTime);
+                    }
+                    // otherwise populate the chart based on historical prices from past month or year
+                    else if ($(this).html() == "Past Year") {
+                        var nowTime = parseInt((new Date).getTime() / 1000);
+                        var oneYearAgoTime = nowTime - (365 * 24 * 60 * 60);
+                        populatePriceHistoryGraphHistorical($("#chart-header-symbol").html(),
+                          oneYearAgoTime,
+                          nowTime);
+                    }
+                });
+            });
+
+            // grab the most recent value and store in the input with id: "most-recent-price"
+            getMostRecentPrice(predictionSymbol, function(mostRecentPrice) {
+              $("#most-recent-price").val(mostRecentPrice);
+              $("#current-price").html(mostRecentPrice.toString());
+            });
+
+
+            $("#stock-price-history").show();
+            $("#prediction-sentence").show();
+            $("#current-price-jumbotron").show();
+        }
+
         var setPredictionInfo = function() {
             var thisUrl = window.location.href;
             var predictionId = thisUrl.substring(thisUrl.indexOf('prediction/') + 
                 "prediction/".length);
-            var predictionsEndpoint = "http://104.131.219.239:3060/predictions?id=";
+            var predictionsEndpoint = "http://predict.toine.io/predictions?id=";
             predictionsEndpoint += predictionId.toString();
             var xmlhttp = new XMLHttpRequest();
             xmlhttp.open("GET", predictionsEndpoint, true);
@@ -88,6 +181,8 @@
                         var thisPrediction = predictions[0];
                         var predictionBigSentence;
                         var predictionSmallSentence;
+
+                        populatePageElements(thisPrediction.object);
 
                         // Case: Predictoin is active, so craft summary sentence to display as the reason
                         if (thisPrediction.status == "active") {
@@ -122,8 +217,6 @@
                             $(predictionSmallElement).html(predictionSmallSentence);
                             $("#prediction-result").append(predictionSmallElement);
                         }
-
-                        
                     }
                 }
             }
