--- a/predictor.html
+++ b/predictor.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>Predict</title>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
 </head>
