create page specifies email it to be input to send result of prediction. Also added prediction sentence for active predictions on the prediction page

--- a/create.html
+++ b/create.html
@@ -79,7 +79,7 @@
           <select id="p-end-month" class="form-control form-group" style="width: 30%"></select>
           <select id="p-end-day" class="form-control form-group" style="width: 30%"></select>
         <p class="form-inline">
-          <input id="p-predictor" class="form-control" placeholder="Email or identity phrase" type="text">
+          <input id="p-predictor" class="form-control" placeholder="your email (to get notified of the prediction result)" type="text">
         </p>
 
         <button id="p-create-button" class="btn btn-lg btn-custom main-button">Create Prediction</button>
